fix call to Base64 encoder